ENH: EMSegment: Second try in adding Slicer4 Support to the EMSegment directory of Slicer3.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16438 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -9,7 +9,7 @@ MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
 # --------------------------------------------------------------------------
 # Find Slicer3 or Slicer4
 
-if(NOT Slicer_SOURCE_DIR)
+if(NOT EM_Slicer4_FOUND)
   # we are not in the Slicer4 Source Dir, let's check if we are in Slicer3 Source Dir
   if(NOT Slicer3_SOURCE_DIR)
     # we are not even in the Slicer3 Source Dir, we have to find Slicer3
@@ -17,10 +17,9 @@ if(NOT Slicer_SOURCE_DIR)
     include(${Slicer3_USE_FILE})
     slicer3_set_default_install_prefix_for_external_projects()
   endif(NOT Slicer3_SOURCE_DIR)
-endif(NOT Slicer_SOURCE_DIR)
+endif(NOT EM_Slicer4_FOUND)
 
 set (EM_Slicer3_FOUND ${Slicer3_SOURCE_DIR})
-set (EM_Slicer4_FOUND ${Slicer_SOURCE_DIR})
 
 # --------------------------------------------------------------------------
 # Include dirs
@@ -223,10 +222,12 @@ set_source_files_properties(
 # --------------------------------------------------------------------------
 # Wrapping
 
-include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake")
-vtk_wrap_tcl3(EMSegment 
-  EMSegment_TCL_SRCS 
-  "${EMSegment_SRCS}" "")
+IF(EM_Slicer3_FOUND)
+  include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake")
+  vtk_wrap_tcl3(EMSegment 
+    EMSegment_TCL_SRCS 
+    "${EMSegment_SRCS}" "")
+ENDIF(EM_Slicer3_FOUND)
 
 #---------------------------------------------------------------------------
 # Add Loadable Module support
