COMP: EMSegment4: Find macros for Slicer4.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16440 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/CMakeLists.txt
@@ -1,3 +1,7 @@
+
+INCLUDE(${Slicer_CMAKE_DIR}/SlicerMacroBuildQtModule.cmake)
+INCLUDE(${Slicer_CMAKE_DIR}/SlicerMacroBuildModuleLogic.cmake)
+
 # --------------------------------------------------------------------------
 # Add subdirectories
 
