ENH: EMSegment4: Add find slicer4 cmake macros routine.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16443 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/CMakeLists.txt
@@ -1,3 +1,5 @@
+SET(Slicer_CMAKE_DIR "${Slicer_SOURCE_DIR}/CMake" CACHE INTERNAL "")
+
 # --------------------------------------------------------------------------
 # Add subdirectories
 
