BUG: search for vtkEMSegmentConfigure.h in binary directory
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16450 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/KWWidgets/CMakeLists.txt
+++ b/Modules/EMSegment/KWWidgets/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
   ${EMSegment_SOURCE_DIR}
+  ${EMSegment_BINARY_DIR}
   ${EMSegment_SOURCE_DIR}/MRML
   ${EMSegment_SOURCE_DIR}/Algorithm
   ${EMSegment_SOURCE_DIR}/ImageFilters
