--- a/Modules/EMSegment/Qt/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/CMakeLists.txt
@@ -1,6 +1,6 @@
+
 # --------------------------------------------------------------------------
 # Add subdirectories
-
 ADD_SUBDIRECTORY(Logic)
 
 
@@ -11,6 +11,7 @@ SET(qt_module_export_directive "Q_SLICER_QTMODULES_EMSEGMENT_EXPORT")
 
 # Additional includes - Current_{source,binary} and Slicer_{Libs,Base} already included
 SET(qt_module_include_directories
+  ${EMSegment_BASE_SRCS}
   ${EMSegmentMRML_SOURCE_DIR}
   ${EMSegmentMRML_BINARY_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}/Logic
