ENH: Switch to the tagged CMTK version 1.7
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16480 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Extensions/CMTK4Slicer/CMakeLists.txt
+++ b/Extensions/CMTK4Slicer/CMakeLists.txt
@@ -67,8 +67,8 @@ message("######### LOCAL_CMAKE_BUILD_OPTIONS:            ${LOCAL_CMAKE_BUILD_OPT
 
 set(PROJECTNAME CMTK)
 ExternalProject_Add(${PROJECTNAME}
-#  SVN_REPOSITORY "http://www.nitrc.org/svn/cmtk/tags/Slicer3"
-  SVN_REPOSITORY "http://www.nitrc.org/svn/cmtk/trunk/core"
+  SVN_REPOSITORY "http://www.nitrc.org/svn/cmtk/tags/Slicer3"
+#  SVN_REPOSITORY "http://www.nitrc.org/svn/cmtk/trunk/core"
   SVN_USERNAME "slicerbot"
   SVN_PASSWORD "slicer"
   CMAKE_ARGS
