BUG: add --disableMultithreading -1
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16515 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -405,7 +405,7 @@ if(NOT DISABLE_CXX_TESTING)
     ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
     --verbose --dontWriteResults --mrmlSceneFileName 
     ${EMSegment_TUTORIAL_DIR}/Template_small.mrml
-    --disableMultithreading 
+    --disableMultithreading -1
     )
   set_tests_properties(
     EMSegCL_DisableMultithreading
