--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -81,6 +81,7 @@ set(EMSegment_BASE_SRCS
   # module
   ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentMRMLManager.cxx 
   ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentLogic.cxx 
+  ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentTclConnector.cxx
 )
 
 include_directories(
