--- a/Modules/EMSegment/Qt/Logic/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Logic/CMakeLists.txt
@@ -11,30 +11,20 @@ SET(module_logic_export_directive "VTK_SLICER_EMSEGMENT_MODULE_LOGIC_EXPORT")
 
 # Additional directories to include
 SET(module_logic_include_directories
-  #${EMSegmentAlgorithm_SOURCE_DIR}
-  #${EMSegmentAlgorithm_BINARY_DIR}
-  #${EMSegmentMRML_SOURCE_DIR}
-  #${EMSegmentMRML_BINARY_DIR}
-  #${EMSegmentRegistration_SOURCE_DIR}
-  #${EMSegmentRegistration_BINARY_DIR}
   ${EMSegment_SOURCE_DIR}
   ${EMSegment_BINARY_DIR}
-  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   )
 
 # Source files
-SET(module_logic_SRCS
-  #${EMSegment_SOURCE_DIR}/vtkEMSegmentLogic.cxx 
+SET(module_logic_SRCS 
   ${EMSegment_BASE_SRCS}
-  #vtkSlicerEMSegmentLogic.cxx
-  #vtkEMSegmentLogic.cxx
   )
 
 # Additional Target libraries
 SET(module_logic_target_libraries
   #EMSegmentMRML
   #EMSegmentRegistration
-  #vtkSlicerVolumesModuleLogic
+  vtkSlicerVolumesModuleLogic
   )
 
 
