STYLE: Just took out some comments
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16540 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -132,7 +132,7 @@ install(
 
 
 file(GLOB TCLFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "Tcl/*.tcl" )
-MESSAGE(STATUS  "${TCLFILES} ${CMAKE_CURRENT_SOURCE_DIR}")
+# MESSAGE(STATUS  "${TCLFILES} ${CMAKE_CURRENT_SOURCE_DIR}")
 foreach(file ${TCLFILES})
  configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/${file}
