BUG: Set FAIL_REGULAR_EXPRESSION for EMSegCL_Task_HumanEye_LogMean tests
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16580 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -779,7 +779,7 @@ if(NOT DISABLE_CXX_TESTING)
       -1
       )
     set_tests_properties(
-      EMSegCL_Task_HumanEye_${registrationpackage}_${size}
+      EMSegCL_Task_HumanEye_LogMean_${registrationpackage}_${size}
       PROPERTIES
       FAIL_REGULAR_EXPRESSION
       "ERROR"
