--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -108,9 +108,30 @@ include_directories(
   ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   ${Volumes_SOURCE_DIR}
   ${Volumes_BINARY_DIR}
+  ${AtlasCreatorCxx_SOURCE_DIR}
+  ${AtlasCreatorCxx_BINARY_DIR}  
   )
 
 if(EM_Slicer3_FOUND)
+
+
+#-----------------------------------------------------------------------------
+## Python, needed to access the AtlasCreator
+if(Slicer3_USE_PYTHON)
+  find_package(PythonLibs)
+endif(Slicer3_USE_PYTHON)
+
+if(Slicer3_USE_PYTHON AND PYTHON_INCLUDE_PATH)
+  set(dir_list ${dir_list} ${PYTHON_INCLUDE_PATH})
+  if(WIN32)
+    set(dir_list ${dir_list} ${PYTHON_INCLUDE_PATH}/../PC)
+  endif(WIN32)
+endif(Slicer3_USE_PYTHON AND PYTHON_INCLUDE_PATH)
+
+include_directories(${dir_list})
+#-----------------------------------------------------------------------------
+
+
 
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentConfigure.h.in 
