--- a/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
+++ b/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
@@ -8,13 +8,28 @@ MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
 
  
 # --------------------------------------------------------------------------
-# Find Slicer3
+# Find Slicer3 or Slicer4
 
-if(NOT Slicer3_SOURCE_DIR)
-  find_package(Slicer3 REQUIRED)
-  include(${Slicer3_USE_FILE})
-  slicer3_set_default_install_prefix_for_external_projects()
-endif(NOT Slicer3_SOURCE_DIR)
+if(NOT EM_Slicer4_FOUND)
+
+  # we are not in the Slicer4 Source Dir, let's check if we are in Slicer3 Source Dir
+  if(NOT Slicer3_SOURCE_DIR)
+    # we are not even in the Slicer3 Source Dir, we have to find Slicer3
+    find_package(Slicer3 REQUIRED)
+    include(${Slicer3_USE_FILE})
+    slicer3_set_default_install_prefix_for_external_projects()
+  endif(NOT Slicer3_SOURCE_DIR)
+  
+  set (EM_Slicer3_FOUND ${Slicer3_SOURCE_DIR})
+
+else(NOT EM_Slicer4_FOUND)
+
+  IF(NOT Slicer_SOURCE_DIR)
+    FIND_PACKAGE(Slicer REQUIRED)
+    INCLUDE(${Slicer_USE_FILE})
+  ENDIF(NOT Slicer_SOURCE_DIR)
+
+endif(NOT EM_Slicer4_FOUND)
 
 
 
@@ -23,7 +38,6 @@ endif(NOT Slicer3_SOURCE_DIR)
 
 include_directories(
   ${EMSegment_BINARY_DIR}
-  ${EMSegment_SOURCE_DIR}/KWWidgets
   ${EMSegment_SOURCE_DIR}
   ${EMSegment_SOURCE_DIR}/MRML
   ${EMSegment_SOURCE_DIR}/Algorithm
@@ -36,59 +50,100 @@ include_directories(
 # --------------------------------------------------------------------------
 # Sources
 
-set(CLP_MODULE EMSegmentCommandLine)
-set(${CLP_MODULE}_SOURCE
-  ${CLP_MODULE}.cxx
+
+set(LINK_LIBRARIES
+  EMSegment
+  vtkCommon
+  AtlasCreatorCxxModule
   )
-generateclp(
-  ${CLP_MODULE}_SOURCE 
-  ${CLP_MODULE}.xml)
 
 # --------------------------------------------------------------------------
-# Build and install the exe
+#
+# EMSegmentCommandline
+#
 
+set(CLP_MODULE EMSegmentCommandLine)
+
+if(NOT EM_Slicer4_FOUND)
+
+# Slicer3 version
+set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
+generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
 add_executable(${CLP_MODULE} ${${CLP_MODULE}_SOURCE})
 slicer3_set_plugins_output_path(${CLP_MODULE})
 target_link_libraries(
   ${CLP_MODULE}
-  EMSegment
-  vtkCommon
-  AtlasCreatorCxxModule   
+  ${LINK_LIBRARIES}
   )
 
 slicer3_install_plugins(${CLP_MODULE})
 
-# ==================================
-# Default install prefix
-# slicer3_set_default_install_prefix_for_external_projects()
+else(NOT EM_Slicer4_FOUND)
 
-set(CLP_MODULE EMSegmentTclInterpreter)
-set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
-generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
-
-add_executable(${CLP_MODULE} ${${CLP_MODULE}_SOURCE})
-slicer3_set_plugins_output_path(${CLP_MODULE})
-target_link_libraries(
-  ${CLP_MODULE}
-  EMSegment
-  vtkCommon
-  AtlasCreatorCxxModule 
+slicerMacroBuildCLI(
+  NAME ${CLP_MODULE}
+  TARGET_LIBRARIES ${LINK_LIBRARIES}
   )
 
-set(CLP_MODULE EMSegmentTransformToNewFormat)
-set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
-generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
-add_executable(${CLP_MODULE} ${${CLP_MODULE}_SOURCE})
-slicer3_set_plugins_output_path(${CLP_MODULE})
-target_link_libraries(
-  ${CLP_MODULE}
-  EMSegment
-  vtkCommon
-  AtlasCreatorCxxModule   
-  )
+endif(NOT EM_Slicer4_FOUND)
 
 # --------------------------------------------------------------------------
-# Build and install the exe
+#
+# EMSegmentTclInterpreter
+#
 
+set(CLP_MODULE EMSegmentTclInterpreter)
 
+if(NOT EM_Slicer4_FOUND)
+
+# Slicer3 version
+set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
+generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
+add_executable(${CLP_MODULE} ${${CLP_MODULE}_SOURCE})
+slicer3_set_plugins_output_path(${CLP_MODULE})
+target_link_libraries(
+  ${CLP_MODULE}
+  ${LINK_LIBRARIES}
+  )
+
+slicer3_install_plugins(${CLP_MODULE})
+
+else(NOT EM_Slicer4_FOUND)
+
+slicerMacroBuildCLI(
+  NAME ${CLP_MODULE}
+  TARGET_LIBRARIES ${LINK_LIBRARIES}
+  )
+
+endif(NOT EM_Slicer4_FOUND)
+
+# --------------------------------------------------------------------------
+#
+# EMSegmentTransformToNewFormat
+#
+
+set(CLP_MODULE EMSegmentTransformToNewFormat)
+
+if(NOT EM_Slicer4_FOUND)
+
+# Slicer3 version
+set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
+generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
+add_executable(${CLP_MODULE} ${${CLP_MODULE}_SOURCE})
+slicer3_set_plugins_output_path(${CLP_MODULE})
+target_link_libraries(
+  ${CLP_MODULE}
+  ${LINK_LIBRARIES}
+  )
+
+slicer3_install_plugins(${CLP_MODULE})
+
+else(NOT EM_Slicer4_FOUND)
+
+slicerMacroBuildCLI(
+  NAME ${CLP_MODULE}
+  TARGET_LIBRARIES ${LINK_LIBRARIES}
+  )
+
+endif(NOT EM_Slicer4_FOUND)
 
