COMP: Only use Python libraries in EMSegment if Python is activated.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16621 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/KWWidgets/CMakeLists.txt
+++ b/Modules/EMSegment/KWWidgets/CMakeLists.txt
@@ -91,6 +91,9 @@ set_source_files_properties(
     )
   slicer3_set_modules_output_path(${lib_name})
 
+if(Slicer3_USE_PYTHON)
+ set(EM_PYTHON_LIBRARIES SlicerBaseGUIPython)
+endif(Slicer3_USE_PYTHON)
 
   target_link_libraries(${lib_name}
       ${Slicer3_Libs_LIBRARIES}
@@ -99,7 +102,7 @@ set_source_files_properties(
       ${ITK_LIBRARIES}
       vtkSlicerVolumesModuleLogic
       Volumes
-      SlicerBaseGUIPython
+      ${EM_PYTHON_LIBRARIES}
       AtlasCreatorCxxModule
       )
 
