ENH: Include folder Algorithm/LLSBiasCorrector
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16650 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -109,6 +109,7 @@ include_directories(
   ${EMSegment_BINARY_DIR}
   ${EMSegment_SOURCE_DIR}/MRML
   ${EMSegment_SOURCE_DIR}/Algorithm
+  ${EMSegment_SOURCE_DIR}/Algorithm/LLSBiasCorrector
   ${EMSegment_SOURCE_DIR}/ImageFilters
   ${EMSegment_SOURCE_DIR}/Registration
   ${EMSegment_SOURCE_DIR}/AMF
