ENH: EMSegment4: Tcl Code Execution now works.
 - added new test for the vtkSlicerCommonInterface to check if Tcl code can run properly on Slicer3 and Slicer4
 - Untied the GUI from GenericTask.tcl by replacing calls to GetTemporaryDirectory and GetPluginsDir to equivalent calls in the EMLogic
 - added methodhandler to handle tcl through python code in Slicer4 properly



git-svn-id: http://svn.slicer.org/Slicer3/trunk@16660 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
+++ b/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
@@ -115,13 +115,14 @@ target_link_libraries(
 
 slicer3_install_plugins(${CLP_MODULE})
 
-else(NOT EM_Slicer4_FOUND)
+# TODO
+#else(NOT EM_Slicer4_FOUND)
 
-slicerMacroBuildCLI(
-  NAME ${CLP_MODULE}
-  TARGET_LIBRARIES ${COMMANDLINE_LINK_LIBRARIES}
-  EXECUTABLE_ONLY  
-  )
+#slicerMacroBuildCLI(
+#  NAME ${CLP_MODULE}
+#  TARGET_LIBRARIES ${COMMANDLINE_LINK_LIBRARIES}
+#  EXECUTABLE_ONLY  
+#  )
 
 endif(NOT EM_Slicer4_FOUND)
 
